# pocket_card_backend

./: Cargo.toml  docker-compose.yaml
migrations/: 001_init_db.up.sql  002_up.sql  003_up.sql  004_up.sql
src/: error.rs  main.rs
src/modules/user/: mod.rs  service.rs
src/modules/user/api/: config.rs  handlers.rs  mod.rs
src/modules/user/domain/: models.rs  ports.rs
src/modules/user/infrastructure/: mod.rs  pg_adapter.rs
src/utils/: mod.rs
src/utils/database/: postgres.rs
